Since 0.3.0
-----------

- Added GetField<F> api