@@ -2,3 +2,5 @@ Since 0.3.0
 -----------
 
 - Added GetField<F> api
+  -> Identifiable trait
+  -> delete accepts certain patches
